added insta links

--- a/new-site/events/tahiti-tofino/index.html
+++ b/new-site/events/tahiti-tofino/index.html
@@ -99,7 +99,7 @@
         <li><a href="http://instagram.com/omjsk" target="_blank">Ja Soon Kim</a></li>
         <li><a href="http://instagram.com/tashavanzandt" target="_blank">Tasha Van Zandt</a></li>
         <li><a href="http://instagram.com/ernathan" target="_blank">Emily Nathan</a></li>
-        <li><a href="http://instagram.com/saltywings" target="_blank">Jampal and Michael from @saltywings</a></li>
+        <li><a href="http://instagram.com/saltywings" target="_blank">Salty Wings</a></li>
       </ul>
     </div>
     <div class="main-content">
@@ -113,7 +113,7 @@
       <ul>
         <li>Catamaran adventure with <a href="https://www.facebook.com/poesailing/">Poe Charter</a> to Tetiaroa – and visiting the avian preserve atoll Tahuna Iti</li>
         <li>Shooting pro surfers on the world-class wave in Teahupo’o</li>
-        <li>Lifestyle shoot with 3 models, @hinateaboo, @almaferrim, @thibaud_tauru</li>
+        <li>Lifestyle shoot with 3 models, <a href="http://instagram.com/hinateaboo" target="_blank">@hinateaboo</a>, <a href="http://instagram.com/almaferrim" target="_blank">@almaferrim</a>, <a href="http://instagram.com/thibaud_tauru" target="_blank">@thibaud_tauru</a></li>
         <li><a href="#">@AllSwellCreative</a> writing workshop</li>
         <li>Fuji Instax photography workshop</li>
         <li>Sunrise mountaintop shoot on mount Rotui</li>
@@ -122,7 +122,7 @@
       </ul>
 
       <h4>Creative Exploration</h4>
-      <p>Throughout the trip our group of photographers/influencers explored Adobe Stock’s portfolio of tools (@adobestock, @adobecreativecloud) that helps emerging photographers connect their work with a larger audience. At Tiny Atlas we hear so often from photographers that they are shooting amazing work and trying to figure out how to translate that into client relationships, i.e. getting paid for their creativity. Becoming an Adobe Stock contributor represents one opportunity to do just that.</p>
+      <p>Throughout the trip our group of photographers/influencers explored Adobe Stock’s portfolio of tools (<a href="http://instagram.com/adobestock" target="_blank">@adobestock</a>, <a href="http://instagram.com/adobecreativecloud" target="_blank">@adobecreativecloud</a>) that helps emerging photographers connect their work with a larger audience. At Tiny Atlas we hear so often from photographers that they are shooting amazing work and trying to figure out how to translate that into client relationships, i.e. getting paid for their creativity. Becoming an Adobe Stock contributor represents one opportunity to do just that.</p>
 
       <h4>Imagery</h4>
       <p>The <a href="https://adobe.ly/2oo762k" target="_blank">Tiny Atlas Tahiti collection</a> for Adobe Premium Stock features the incredible results from our trip.</p>
