--- a/new-site/events/tahiti-tofino/index.html
+++ b/new-site/events/tahiti-tofino/index.html
@@ -113,7 +113,7 @@
       <ul>
         <li>Catamaran adventure with <a href="https://www.facebook.com/poesailing/">Poe Charter</a> to Tetiaroa – and visiting the avian preserve atoll Tahuna Iti</li>
         <li>Shooting pro surfers on the world-class wave in Teahupo’o</li>
-        <li>Lifestyle shoot with 3 models, <a href="http://instagram.com/hinateaboo" target="_blank">@hinateaboo</a>, <a href="http://instagram.com/almaferrim" target="_blank">@almaferrim</a>, <a href="http://instagram.com/thibaud_tauru" target="_blank">@thibaud_tauru</a></li>
+        <li>Lifestyle shoot with 3 models, <a href="http://instagram.com/hinateaboo" target="_blank">@hinateaboo</a>, <a href="http://instagram.com/albaferrim" target="_blank">@albaferrim</a>, <a href="http://instagram.com/thibaud_tauru" target="_blank">@thibaud_tauru</a></li>
         <li><a href="#">@AllSwellCreative</a> writing workshop</li>
         <li>Fuji Instax photography workshop</li>
         <li>Sunrise mountaintop shoot on mount Rotui</li>
