--- a/new-site/index.html
+++ b/new-site/index.html
@@ -198,7 +198,7 @@
                     <div class="details">
                         <span class="meta">March 2017</span>
                         <h3>Tahiti</h3>
-                        <p>The islands, deep in the pacific, offer tropical landscapes, a reef accessible in minutes that’s a mecca for underwater wildlife just waiting to be photographed, and equally exciting surf in each spot.</p>
+                        <p>The islands, deep in the Pacific, offer tropical landscapes, a reef accessible in minutes, world class surf and surf photography, turquoise lagoons brimming with marine life, and the warmest Tahitian hospitality.</p>
                         <span class="link-style">View Trip</span>
                     </div>
                     </a>
