--- a/new-site/events/tahiti-tofino/index.html
+++ b/new-site/events/tahiti-tofino/index.html
@@ -84,6 +84,7 @@
   <div id="tahiti" class="img-head" style= "height: 600px; background-image: url(images/00_Tahiti_TAQ_trip.jpg)"></div>
 
   <div class="details-card">
+    <iframe width="710" height="399" src="https://www.youtube.com/embed/oysQQvbSiPE?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
     <h3>Tahiti and Mo’orea</h3>
     <div class="sidebar">
       <p class="info">
@@ -114,8 +115,8 @@
         <li>Catamaran adventure with <a href="https://www.facebook.com/poesailing/">Poe Charter</a> to Tetiaroa – and visiting the avian preserve atoll Tahuna Iti</li>
         <li>Shooting pro surfers on the world-class wave in Teahupo’o</li>
         <li>Lifestyle shoot with 3 models, <a href="http://instagram.com/hinateaboo" target="_blank">@hinateaboo</a>, <a href="http://instagram.com/albaferrim" target="_blank">@albaferrim</a>, <a href="http://instagram.com/thibaud_tauru" target="_blank">@thibaud_tauru</a></li>
-        <li><a href="#">@AllSwellCreative</a> writing workshop</li>
-        <li>Fuji Instax photography workshop</li>
+        <li><a href="http://instagram.com/AllSwellCreative" target="_blank">@AllSwellCreative</a> writing workshop</li>
+        <li><a href="https://www.instagram.com/fujifilm_instax_northamerica/?hl=en" target="_blank">Fuji Instax</a>  photography workshop</li>
         <li>Sunrise mountaintop shoot on mount Rotui</li>
         <li>Stock photography roundtable creative review under palm trees on a tropical lawn with CEO of <a href="http://www.cavanimages.com">Cavan Images</a> Peter Hannert</li>
         <li><a href="http://instagram.com/cookwilltravel" target="_blank">Chef Mychael Henry's</a> island style delicious meals.</li>
@@ -128,7 +129,7 @@
       <p>The <a href="https://adobe.ly/2oo762k" target="_blank">Tiny Atlas Tahiti collection</a> for Adobe Premium Stock features the incredible results from our trip.</p>
 
       <h4>Big Thanks to:</h4>
-      <p> <a href="https://www.instagram.com/fujifilm_instax_northamerica/?hl=en" target="_blank">Fuji Instax</a> who supplied Instax film and cameras for creative exploration.<br/>
+      <p><a href="https://www.instagram.com/fujifilm_instax_northamerica/?hl=en" target="_blank">Fuji Instax</a> who supplied Instax film and cameras for creative exploration.<br/>
       <a href="https://www.borrowlenses.com/" target="_blank">Borrow Lenses</a>, who supplied technical gear for photographers to expand their skills.</p>
       <div class="half">
         <ul>
@@ -272,8 +273,18 @@
         October 6th-11th 2016
       </p>
       <p class="info">
+        <span class="label">Photograhers:</span><br>
+        <ul>
+          <li><a href="https://www.instagram.com/nicole_franzen" target="_blank">Nicole Franzen</a></li>
+          <li><a href="https://www.instagram.com/omjsk" target="_blank">Ja Soon Kim</a></li>
+          <li><a href="https://www.instagram.com/ryanstruck" target="_blank">Ryan Struck</a></li>
+        </ul>
         <span class="label">Guides:</span><br>
-        <a href="https://www.instagram.com/jeremykoreski/" target="_blank">Jeremy Koreski - Local Guide</a><br>
+        <ul>
+          <li><a href="https://www.instagram.com/earthmissions/" target="_blank">Tom Werney</a></li>
+          <li><a href="https://www.instagram.com/AllSwellCreative/" target="_blank">Laura Rubin</a></li>
+          <li><a href="http://instagram.com/ernathan" target="_blank">Emily Nathan</a></li>
+        </ul>
         Emily Nathan<br>
         Laura Rubin<br>
         Tom Werney<br>
