--- a/new-site/index.html
+++ b/new-site/index.html
@@ -226,7 +226,7 @@
               <img src="images/solas-logo.png" alt="Solas Logo" class="logo">
               <h3>A casual camera bag for  photographers</h3>
               <p>A lightweight, versatile and durable camera bag Tiny Atlas Quarterly + Alite Designs made just for you.</p>
-              <a href="https://www.alitedesigns.com/collections/californiamade"><button>Preorder</button></a>
+              <a href="https://www.alitedesigns.com/collections/californiamade"><button>Buy</button></a>
             </div>
           </div>
 
