added responsive video

--- a/new-site/events/tahiti-tofino/index.html
+++ b/new-site/events/tahiti-tofino/index.html
@@ -84,7 +84,9 @@
   <div id="tahiti" class="img-head" style= "height: 600px; background-image: url(images/00_Tahiti_TAQ_trip.jpg)"></div>
 
   <div class="details-card">
-    <iframe width="710" height="399" src="https://www.youtube.com/embed/oysQQvbSiPE?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+    <div class="video-container">
+      <iframe width="710" height="399" src="https://www.youtube.com/embed/oysQQvbSiPE?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+    </div>
     <h3>Tahiti and Mo’orea</h3>
     <div class="sidebar">
       <p class="info">
@@ -265,7 +267,10 @@
   <div id="tofino" class="img-head" style= "height: 600px; background-image: url(images/00_Tofino_TAQ_trip.jpg)"></div>
 
   <div class="details-card">
-    <iframe src="https://player.vimeo.com/video/207752729?title=0&byline=0&portrait=0" width="710" height="399" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    <div class="video-container">
+      <iframe src="https://player.vimeo.com/video/207752729?title=0&byline=0&portrait=0" width="710" height="399" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    </div>
+
     <h3>Vancouver Island, British Columbia</h3>
     <div class="sidebar">
       <p class="info">
