added images & text changes

--- a/new-site/macao/index.html
+++ b/new-site/macao/index.html
@@ -181,6 +181,22 @@
                 <img srcset="images/02_Macao_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Macao, Emily Nathan">
             </picture>
             <!-- IMAGE END -->
+
+
+                                    <!-- BOX  INTERVIEW-->
+                                         <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
+                                    <!-- CAPTION -->
+                                    <!-- LEFT CAPTION -->
+                                    <div class="pg-box-content">
+                                        <!-- CONTENT -->
+                                        <!-- INTERVIW -->
+                                        <div id="pg-interview">
+                                            <img src="images/macao2_small.jpg" alt="" >
+                                        </div>
+                                    </div>
+                                    <!--END INTERVIEW -->
+                                </div>
+                                <!-- END BOX -->
         </div>
         <!-- end wrapper div -->
     </div>
@@ -211,8 +227,7 @@
                             <!-- INTERVIW -->
                             <div id="pg-interview">
                                 <h2 class="with-ill-small">Macao</h2>
-                                <p>A warm breeze blew across my face. Outside was bright and dry.  The sun glinted off plate glass facades of shiny Chanel and Dior shops. In a large room with floor-to-ceiling windows and a huge white marble bathroom overlooking the city, a luxuriously comfortable bed awaited. You might have guessed that I was in Las Vegas, Dubai, Los Angeles or a yacht-filled harbor on the Mediterranean. But no, I was in Macao.</p>
-                                <p>Not the Macao you might expect, the one that’s supposed to be a larger, Chinese Las Vegas. Upon walking into casinos in Vegas, you are bombarded with bings and clangs and flashes of light. Cocktail waitresses masterfully wend between busy tables and the voices of card dealers draw your attention to the cowboy and baseball hat clad crowds that form around each caller. In Macao, it’s hard to find the gambling areas in casinos at all. On our stay, I kept meaning to spend time in a casino to see what gambling actually looked like, but never really got past a quick glance into a quiet room. The gambling there is expressly hidden away from the grand entrances of the resorts, behind closed doors, no drinks allowed. It is a hushed and serious affair.</p>
+                                <p>It’s hot and bright. Sun glints off the plate glass windows of Chanel and Dior shops. The hotel rooms are large, the bathrooms are made of marble and a perfect bed await. But there are no bings and clangs and endless flashing lights. No calls from card dealers draw your attention to the baseball hat wearing crowds that form around them.  In Macao, it’s hard to find the gambling areas in the resorts at all. On our stay, I kept meaning to spend time in a casino to see what gambling actually looked like, but never got past a quick glance into a quiet room. The gambling in Macao is expressly hidden away from the grand entrances of the resorts, behind closed doors, no drinks allowed.</p>
                                 <p>We did visit the new megaplex resort that is Studio City, where a massive ferris wheel is indeed built into a new skyscraper, 20 something flights up. We rode the lit-up escalators, visited a few themed restaurants and passed by luxury shops in indoor malls that did remind me a bit of Las Vegas. Yet the Macao I became fond of emerged from the neighborhoods that I would consider the real city, where the old casinos (like the landmark Hotel Lisboa with an awesome glammy 70’s vibe) spill into the busy streets of a thriving metropolis.</p>
                             </div>
                         </div>
@@ -279,6 +294,22 @@
                 <img srcset="images/06_Macao_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Macao, Emily Nathan">
             </picture>
             <!-- IMAGE END -->
+
+
+                                    <!-- BOX  INTERVIEW-->
+                                         <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
+                                    <!-- CAPTION -->
+                                    <!-- LEFT CAPTION -->
+                                    <div class="pg-box-content">
+                                        <!-- CONTENT -->
+                                        <!-- INTERVIW -->
+                                        <div id="pg-interview">
+                                            <img src="images/macao5_small.jpg" alt="" >
+                                        </div>
+                                    </div>
+                                    <!--END INTERVIEW -->
+                                </div>
+                                <!-- END BOX -->
         </div>
         <!-- end wrapper div -->
     </div>
@@ -309,9 +340,11 @@
                             <!-- INTERVIW -->
                             <div id="pg-interview">
                                 <h2 class="with-ill-small">Once a Portuguese Colony</h2>
-                                <p>Macao was a Portuguese colony until 1999. And while the province is now emancipated, the city still prides itself on its heritage. The Portuguese language itself prevails - you will find it still on almost all public signs, as well as throughout the vernacular language and of course on most restaurant menus. A good example of that pride is found at the Ruins of St. Paul - a seventeenth century Jesuit church that burned in a fire after a typhoon in 1835. Today, a magnificent section of the façade remains, supported and transformed into an open air museum, as well as one of the favorite meeting places in the city, especially during golden hour where it serves as a major selfie hangout.</p>
+                                <p>Macao was a Portuguese colony until 1999. And while the province is now emancipated, the city still prides itself on its heritage. The Portuguese language itself prevails - you will find it still on almost all public signs, as well as throughout the vernacular language and of course on most restaurant menus. A good example of that pride is found at the Ruins of St. Paul - a seventeenth century Jesuit church that burned in a fire after a typhoon in 1835. Today, a magnificent section of the façade remains, supported and transformed into an open air museum, as well as one of the favorite meeting places in the city, especially during golden hour where it serves as a selfie hangout.</p>
                                 <p>Below the steps of the ruins, streets and alleyways are filled with local shops and food stalls packed with gift boxes; pretty almond cookies and barrels brimming with varieties of jerky ranging in flavor from spicy pork with abalone to pork with black pepper and then further onto wild boar and ostrich.</p>
-                                <p>The most iconic Portuguese reference comes from the famous tiles that line the grand pedestrian thoroughfares of Lisbon, Porto, Brazil as well as the squares and streets and fountains of Macao. Throughout the central business districts, you are constantly reminded of this history as you cross over the Calçada of tiled ships, tiled waves and tiled patterns all masterfully constructed of the signature blue and white Portuguese mosaic tiles.</p>
+                                <p>The most iconic Portuguese reference comes from the famous tiles that line the grand pedestrian thoroughfares of Lisbon, Porto, Brazil as well as the squares and streets and fountains of Macao. Throughout the central business districts, you are constantly reminded of this history as you cross over the Calçada of tiled ships, tiled waves and tiled patterns all masterfully constructed of the signature two-toned Portuguese mosaic tiles.</p>
+                                <p>To find the heart of Macao head into the neighborhoods. Home cooks come to buy the freshest available fish and produce in Chinatown, never deigning to prepare food they have not purchased alive. Wooden-shelved natural apothecaries house thousands of deep drawers piled high with homeopathic remedies. Uniformed children stop at tea shops on their way home from school with their parents, sitting comfortably beside international tourist couples with rainbow dyed hair.</p>
+
                             </div>
                         </div>
                         <!--END INTERVIEW -->
@@ -432,27 +465,6 @@
             </picture>
             <!-- IMAGE END -->
 
-
-                        <!-- BOX  INTERVIEW-->
-                             <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
-                        <!-- CAPTION -->
-                        <!-- LEFT CAPTION -->
-                        <div class="pg-box-content">
-                            <!-- CONTENT -->
-                            <!-- INTERVIW -->
-                            <div id="pg-interview">
-                                <h2 class="with-ill-small">Macao</h2>
-                                <p>To find the heart of Macao head into the neighborhoods. Home cooks come to buy the freshest available fish and produce in Chinatown, never deigning to prepare food they have not purchased alive. Wooden-shelved natural apothecaries house thousands of deep drawers piled high with homeopathic remedies. Uniformed children stop at tea shops on their way home from school with their parents, sitting comfortably beside international tourist couples with rainbow dyed hair.</p>
-                                <p>In the colorful Lazarus district we ran into a local designer’s photo shoot while taking pictures ourselves of the multi-colored colonial balconied walls, covered with hanging plants as scooters streamed by. After striking up a conversation with the line’s designer, we walked around the corner to her shop, En Masse, where she proceeded to customize a perfect leather handbag for me on the spot.</p>
-                                <p>Macao is a day trip and ferry ride away from Hong Kong and the city’s pace does feel like that of a getaway from a big city. Even while Macao itself is cosmopolitan (with a massive population), and filled with tourists, the pace is much slower than in Hong Kong. Beyond the central tourist squares the pace is even more relaxed. In Taipa Village we stopped by a small design shop, Quarter Square. The designer/owner Alberto Chan recently moved home from years in New York. His shop houses a little café as well so we grabbed iced coffees and headed up a narrow staircase past his home office to a roof deck to enjoy our drinks languidly, chatting as the sun set over the low-slung buildings of the island.</p>
-                                <p>Locals and tourists alike make a pilgrimage out to Coloane Island where you can find the oldest version of the famous Macanese egg tarts, (less sweet than the traditional Chinese one). Golden yellow boxes in hand, they relax along the tree-lined waterfront, families on benches and dogs napping in the last warm light beside parked motorbikes.</p>
-                                <p>On Coloane we enjoyed my favorite evening of the trip over a long dinner outside at casual Nga Tim Cafe. The restaurant is housed in a tiny square and looks onto the petit and bright yellow and blue St. Francis Xavier Church. Course after course we feasted on fresh local fish and spicy noodle dishes, presided over by the owner himself. We drank ice-cold Macanese beer out of heavy glass mugs and bought miniature fireworks from a local vendor. This was not the Chinese Vegas I was expecting, but rather a much more culturally lush and deep city with layers of history and culture  to explore.</p>
-                            </div>
-                        </div>
-                        <!--END INTERVIEW -->
-                    </div>
-                    <!-- END BOX -->
-
     </div>
     <!-- end wrapper div -->
     </div>
@@ -532,6 +544,25 @@
             </picture>
             <!-- IMAGE END -->
 
+
+                                    <!-- BOX  INTERVIEW-->
+                                         <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
+                                    <!-- CAPTION -->
+                                    <!-- LEFT CAPTION -->
+                                    <div class="pg-box-content">
+                                        <!-- CONTENT -->
+                                        <!-- INTERVIW -->
+                                        <div id="pg-interview">
+                                            <img src="images/macao4_small.jpg" alt="" >
+                                            <h2 class="with-ill-small">Lazarus</h2>
+                                            <p>In the colorful Lazarus district we ran into a local designer’s photo shoot while taking pictures ourselves of the multi-colored colonial balconied walls, covered with hanging plants as scooters streamed by. After striking up a conversation with the line’s designer, we walked around the corner to her shop, En Masse, where she proceeded to customize a perfect leather handbag for me on the spot.</p>
+                                        </div>
+                                    </div>
+                                    <!--END INTERVIEW -->
+                                </div>
+                                <!-- END BOX -->
+
+
         </div>
         <!-- end wrapper div -->
     </div>
@@ -600,7 +631,7 @@
                             <!-- INTERVIW -->
                             <div id="pg-interview">
 
-                                <h2 class="with-ill-small"></h2>
+                                <h2 class="with-ill-small">Coloane</h2>
                                 <p>Macao is a day trip and ferry ride away from Hong Kong and the city’s pace does feel like that of a getaway from a big city. Even while Macao itself is cosmopolitan (with a massive population), and filled with tourists, the pace is much slower than in Hong Kong. Beyond the central tourist squares the pace is even more relaxed. In Taipa Village we stopped by a small design shop, Quarter Square. The designer/owner Alberto Chan recently moved home from years in New York. His shop houses a little café as well so we grabbed iced coffees and headed up a narrow staircase past his home office to a roof deck to enjoy our drinks languidly, chatting as the sun set over the low-slung buildings of the island.</p>
                                 <p>Locals and tourists alike make a pilgrimage out to Coloane Island where you can find the oldest version of the famous Macanese egg tarts, (less sweet than the traditional Chinese one). Golden yellow boxes in hand, they relax along the tree-lined waterfront, families on benches and dogs napping in the last warm light beside parked motorbikes.</p>
                                 <p>On Coloane we enjoyed my favorite evening of the trip over a long dinner outside at casual Nga Tim Cafe. The restaurant is housed in a tiny square and looks onto the petit and bright yellow and blue St. Francis Xavier Church. Course after course we feasted on fresh local fish and spicy noodle dishes, presided over by the owner himself. We drank ice-cold Macanese beer out of heavy glass mugs and bought miniature fireworks from a local vendor. This was not the Chinese Vegas I was expecting, but rather a much more culturally lush and deep city with layers of history and culture  to explore.</p>
@@ -690,6 +721,22 @@
             </picture>
             <!-- IMAGE END -->
 
+
+                                    <!-- BOX  INTERVIEW-->
+                                         <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
+                                    <!-- CAPTION -->
+                                    <!-- LEFT CAPTION -->
+                                    <div class="pg-box-content">
+                                        <!-- CONTENT -->
+                                        <!-- INTERVIW -->
+                                        <div id="pg-interview">
+                                            <img src="images/macao3_small.jpg" alt="" >
+                                        </div>
+                                    </div>
+                                    <!--END INTERVIEW -->
+                                </div>
+                                <!-- END BOX -->
+
         </div>
         <!-- end wrapper div -->
     </div>
@@ -752,8 +799,27 @@
     </div>
     <!-- END PAGE 27 ------------------------------------------------------------->
 
-    <!-- PAGE 28 ------------------------------------------------------------->
+    <!-- PAGE 99 ------------------------------------------------------------->
     <div id="page28" class="pg-page">
+        <!-- WRAPPER -->
+        <div class="pg-wrapper">
+            <!-- IMAGE START -->
+            <picture>
+                <!--[if IE 9]><video style="display: none;"><![endif]-->
+                <source srcset="images/99_Macao_TAQ_CITY-L.jpg" media="(min-width: 960px)">
+                <source srcset="images/99_Macao_TAQ_CITY-M.jpg" media="(min-width: 768px)">
+                <!--[if IE 9]></video><![endif]-->
+                <img srcset="images/99_Macao_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Macao, Emily Nathan">
+            </picture>
+            <!-- IMAGE END -->
+
+        </div>
+        <!-- end wrapper div -->
+    </div>
+    <!-- END PAGE 99 ------------------------------------------------------------->
+
+    <!-- PAGE 28 ------------------------------------------------------------->
+    <div id="page29" class="pg-page">
         <!-- WRAPPER -->
         <div class="pg-wrapper">
             <!-- IMAGE START -->
@@ -772,7 +838,7 @@
     <!-- END PAGE 28 ------------------------------------------------------------->
 
     <!-- PAGE 29 ------------------------------------------------------------->
-    <div id="page29" class="pg-page">
+    <div id="page30" class="pg-page">
         <!-- WRAPPER -->
         <div class="pg-wrapper">
             <!-- IMAGE START -->
@@ -872,7 +938,7 @@
     <!-- END PAGE 29 ------------------------------------------------------------->
 
     <!-- PAGE 30 ------------------------------------------------------------->
-    <div id="page30" class="pg-page">
+    <div id="page31" class="pg-page">
         <!-- WRAPPER -->
         <div class="pg-wrapper">
             <!-- IMAGE START -->
@@ -947,7 +1013,8 @@
             "page27",
             "page28",
             "page29",
-            "page30");
+            "page30",
+            "page31");
         var pageCount = 0;
         var pageNext;
         $('#pg-pageUp').on('click', function() {
