--- a/new-site/macao/index.html
+++ b/new-site/macao/index.html
@@ -149,7 +149,7 @@
                     <!-- CONTENT -->
                     <!-- INTERVIW -->
                     <div id="pg-interview">
-                        <div class="title-ill"><img src="images/macao-title.png" alt="" style="max-width:410px;"></div>
+                        <div class="title-ill"><img src="images/macao-title.png" alt="" style="width:410px;"></div>
                         <h3>Photography by: <a href="http://www.emilynathan.com/" target="_blank">Emily Nathan</a><br />
                          Written by: <a href="http://www.emilynathan.com/" target="_blank">Emily Nathan</a><br />
                          Illustrations by: <a href="http://jimmezei.com" target="_blank">Jim Mezei</a><br />
@@ -1005,7 +1005,7 @@
                     <span class="feature">Macao</span>
                 </div>
                 <div class="feature-links">
-                    <span id="pageLink"><a href="#page29">Trip Resources</a></span>
+                    <span id="pageLink"><a href="#page30">Trip Resources</a></span>
                 </div>
             </div>
         </div>
