added wardrobe, fixed resources link

--- a/new-site/macao/index.html
+++ b/new-site/macao/index.html
@@ -154,6 +154,7 @@
                          Written by: <a href="http://www.emilynathan.com/" target="_blank">Emily Nathan</a><br />
                          Illustrations by: <a href="http://jimmezei.com" target="_blank">Jim Mezei</a><br />
                          Model: <a href="https://www.instagram.com/belledemo/" target="_blank">Sonia</a></br />
+                         Wardrobe: <a href="https://heidimerrick.com/" target="_blank">Heidi Merrick</a></br />
                          Cameo: <a href="http://scoutsixteen.com/" target="_blank">Justin Livingston</a></h3>
                     </div>
                 </div>
@@ -1147,15 +1148,15 @@
                 }, {
                     duration: 1000
                 }, "easeInOutQuint"); // OUT
-                $("#page29").velocity({
+                $("#page30").velocity({
                     opacity: 1
                 }, {
                     display: "block"
                 }, {
                     duration: 1000
                 }, "easeInOutQuint"); // IN
-                pageCount = 28;
-                pageNext = 28;
+                pageCount = 29;
+                pageNext = 29;
             }
         }
 
